<!--
  ~ This file is part of AndProx, an application for using Proxmark3 on Android.
  ~
  ~ Copyright 2016-2019 Michael Farrell <micolous+git@gmail.com>
  ~
  ~ This program is free software: you can redistribute it and/or modify it
  ~ under the terms of the GNU General Public License as published by the Free
  ~ Software Foundation, either version 3 of the License, or (at your option)
  ~ any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT
  ~ ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
  ~ FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for
  ~ more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with
  ~ this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  ~ Under section 7 of the GNU General Public License v3, the following additional
  ~ terms apply to this program:
  ~
  ~  (b) You must preserve reasonable legal notices and author attributions in
  ~      the program.
  ~  (c) You must not misrepresent the origin of this program, and need to mark
  ~      modified versions in reasonable ways as different from the original
  ~      version (such as changing the name and logos).
  ~  (d) You may not use the names of licensors or authors for publicity
  ~      purposes, without explicit written permission.
  -->

<resources>
    <string name="app_name">AndProx</string>

    <string name="app_version">version %s</string>
    <string name="pm3_client_version">PM3 client: %s</string>
    <string name="pm3_build_ts">Build time: %s</string>

    <string name="no_usb_host_title">No USB Host support</string>
    <string name="no_usb_host">USB Host support is not available on this device. You will not be able to connect it to a Proxmark3 via USB.</string>

    <string name="no_storage_title">Storage permission required</string>
    <string name="no_storage">Storage is required for rainbow tables, scripts and dumping cards. Some actions may not work without it.</string>

    <string name="sys_info_title">System Information</string>

    <string name="no_devices_present_title">Proxmark3 not detected</string>
    <string name="no_devices_present">Please wait 10 seconds after all lights have turned off for it to finish booting.</string>

    <string name="permission_denied_title">Permission denied</string>
    <string name="permission_denied">Unable to connect to the Proxmark3 as you have not given AndProx permission to use it.</string>

    <string name="communication_error_title">Communication error</string>
    <string name="communication_error">There was a problem communicating with the Proxmark3.</string>

    <string name="connection_timeout_title">Connection timeout</string>
    <string name="connection_timeout">Timed out waiting for response from Proxmark3. Power cycle the Proxmark3 before continuing.</string>

    <string name="usb_disconnected_title">Proxmark3 disconnected</string>
    <string name="usb_disconnected">The USB cable to the Proxmark3 was unplugged.</string>

    <string name="connect">Connect</string>

    <string name="title_activity_home">AndProx: Proxmark3</string>

    <string name="lf">Low Frequency</string>

    <string name="hf">High Frequency</string>

    <string name="title_activity_about">About</string>
    <string name="action_settings">Settings…</string>
    <string name="title_settings">Settings</string>
    <string name="system_info_btn">System Info…</string>
    <string name="about_andprox_btn">About…</string>
    <string name="intro_text_default">Connect the Proxmark3 to your device’s USB port. Wait 10 seconds after the device has finished booting (all lights have turned on then off) before attempting to connect.</string>
    <string name="intro_text_usb_detected">Proxmark3 detected! Hit Connect to begin.</string>
    <string name="intro_text_old_pm3">Old Proxmark3 firmware detected. Please use a PC to reflash to current firmware.</string>
    <string name="intro_text_tcp">Using TCP connection to Proxmark3 at %1$s port %2$s.</string>
    <string name="intro_text_none">Running PM3 client offline, with no device connection.</string>

    <string name="reflash_required_title">Proxmark3 firmware update required</string>
    <!-- %s is a substitute for the current version -->
    <string name="reflash_required_message">Please use a PC to reflash to the official proxmark.org firmware (%s). Third-party firmware (eg: Iceman) is not supported by this software.</string>
    <string name="instructions">Instructions</string>

    <string name="tune_antennas">Tune antennas</string>
    <string name="tuning_antenna">Tuning antenna</string>
    <string name="tuning_antenna_desc">This will take a few seconds</string>

    <string name="recall">Recall</string>
    <string name="no_cmd_buffer">No command in buffer</string>

    <string name="command_hint">Enter a command…</string>
    <string name="command_waiting">Waiting for Proxmark3…</string>
    <string name="clipboard_denied">Couldn’t access clipboard</string>
    <string name="clipboard_copied">Copied to clipboard</string>
    <string name="copying_assets">Copying assets…</string>
    <string name="connecting_pm3">Connecting to Proxmark3…</string>
    <string name="wait_long">This may take a few moments</string>
    <string name="wait_short">This normally takes a moment</string>
    <string name="error_copying">Error copying files</string>
    <string name="ok">OK</string>
    <string name="tuning_error_title">Error tuning antennas</string>
    <string name="tuning_error">Proxmark3 did not return a valid response.</string>
    <string name="visit_website">Website</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="scroll_to_bottom">Scroll to bottom</string>
    <string name="share">Share</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="lf_antenna">LF Antenna</string>
    <string name="hf_antenna">HF Antenna</string>

    <string name="connect_button_usb">Connect via USB…</string>
    <string name="connect_button_tcp">Connect via TCP/IP…</string>
    <string name="connect_button_none">Offline mode…</string>

    <string name="invalid_input_title">Invalid input</string>
    <string name="invalid_tcp_port">Valid TCP ports are 1 – 65535.</string>
    <string name="emulator_host_unavailable">Connecting to the emulator host is only available on emulated devices.</string>
    <string name="tcp_error">TCP connection error</string>
    <string name="tcp_error_host_not_found">The host %1$s could not be found: %2$s</string>

    <string name="connectivity_settings">Connectivity settings</string>
    <string name="transport_layer">Transport layer</string>

    <string name="devices_settings">Devices settings</string>
    <string name="connect_to_proxmark_rdv4">Allow Proxmark RDV4 connection</string>
    <string name="connect_to_proxmark_on">All Proxmark version allowed (RDV3-RDV4)</string>
    <string name="connect_to_proxmark_off">Allowed Only Proxmark RDV3</string>

    <string-array name="conn_modes">
        <item>USB</item>
        <item>TCP/IP</item>
        <item>None (offline mode)</item>
    </string-array>

    <string-array name="conn_modes_values" translatable="false">
        <item>usb</item>
        <item>tcp</item>
        <item>none</item>
    </string-array>


    <string name="tcp_ip_settings">TCP/IP settings</string>

    <string name="connect_android_host">Connect to Android Emulator host</string>
    <string name="connect_android_host_on">Connect to 127.0.0.1 on the host running the Android Emulator</string>
    <string name="connect_android_host_off">Connect to the hostname listed below</string>
    <string name="hostname">Hostname</string>
    <string name="tcp_port">Port</string>

    <string name="advanced_settings">Advanced settings</string>

    <string name="allow_sleep">Allow the screen to turn off</string>
    <string name="allow_sleep_off">When connected, always keep the screen on. This makes AndProx more reliable, but increases power consumption.</string>
    <string name="allow_sleep_on">When connected, allow the screen to turn off automatically. This extends battery life, but makes AndProx less reliable.</string>
</resources>
